--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 					</section>
 
 				<!-- Copyright -->
-					<div class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">@ALJKN/HTML5 UP</a>.</div>
+					<div class="copyright">&copy; Ernie's Portfolio. All rights reserved. Design: <a href="https://html5up.net">@ALJKN/HTML5 UP</a>.</div>
 
 			</div>
 
