--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/me_991x1124jpg.jpg" alt="Pic of me" /></span>
+							<span class="image fill" data-position="center"><img src="images/gallery/me_991x1124jpg.jpg" alt="Pic of me" /></span>
 						</div>
 					</section>
 
