--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<title>Ernie's Portfolio - HTML5</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="Ernie's online portfolio." />
-		<meta name="keywords" content="Ernie DeLuna" />
+		<meta name="description" content="Ernie DeLuna's online portfolio." />
+		<meta name="keywords" content="ernie deluna,ernie deluna portfolio,ernie deluna resume,ernie deluna online portfolio,ernie deluna online resume" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
@@ -30,18 +30,19 @@
 				<!-- Section -->
 					<section id="first">
 						<header>
-							<h2>Magna sed nullam nisl adipiscing</h2>
+							<h2>about me</h2>
 						</header>
 						<div class="content">
-							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
-							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+							<p><strong>I have</strong> been working in IT systems operations for 15 years.
+                                                             Over the last few years, I have picked up programming.</p>
+							<span class="image main"><img src="images/gallery/alphabet-close-up-colored-211492_612x421.jpg" alt="" /></span>
 						</div>
 					</section>
 
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Feugiat consequat tempus ultrices</h2>
+							<h2>my skills</h2>
 						</header>
 						<div class="content">
 							<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
@@ -60,16 +61,20 @@
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Ultrices erat magna sed condimentum</h2>
+							<h2>my projects</h2>
 						</header>
 						<div class="content">
-							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+							<p><strong>Projects</strong> below are snippets of my current work.</p>
 
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Erat aliquam</h3>
-										<p>Vehicula ultrices dolor amet ultricies et condimentum. Magna sed etiam consequat, et lorem adipiscing sed dolor sit amet, consectetur amet do eiusmod tempor incididunt  ipsum suspendisse ultrices gravida.</p>
+										<h3>Hashboard (java)</h3>
+										<p>A hacking dashboard/toolkit that breaks down the 5 phases involved in a typical hacking process. 
+                                        A colorful graphical display will only show each phase's description and any associated known hacking tools. 
+                                        No hacking is actually performed, as it is only static/non-linked info.<br>
+                                        Information mostly from https://www.geeksforgeeks.org/5-phases-hacking/ 
+                                        and http://blog.tofte-it.dk/ethical-hacking-tools-for-the-5-phases-of-hacking/).</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -84,8 +89,8 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Nisl consequat</h3>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam sed facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet mauris. Ut magna finibus nisi nec lacinia ipsum maximus.</p>
+										<h3>MilMockIps (java)</h3>
+										<p>Mimics a system that combines HR and Pay related actions for military personnel staff. This is simply a cosmetic application that, instead of using Java Applet technology, uses JavaFX libraries and allow application to be ran both separately and within a Java WebStart element.</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -99,8 +104,9 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Lorem gravida</h3>
-										<p>Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aenean ornare velit lacus, ac varius sed enim lorem ullamcorper dolore.  ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis.</p>
+										<h3>Admin Stuff (windows/powershell)</h3>
+										<p>I made this Powershell program to assist with common job-related actions. 
+                                                                                    I basically lumped most of my common scripts into a WinForms GUI using several .NET components.</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -117,13 +123,13 @@
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Duis sed adpiscing veroeros amet</h2>
+							<h2>my resume</h2>
 						</header>
 						<div class="content">
-							<p><strong>Proin tempus feugiat</strong> sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.</p>
+							<p><strong>Please</strong> feel free to download my current resume for offline review.</p>
 							<ul class="actions">
-								<li><a href="#" class="button primary large">Get Started</a></li>
-								<li><a href="#" class="button large">Learn More</a></li>
+								<li><a href="#" class="button primary large">Download Resume (PDF)</a></li>
+								<li><a href="#" class="button large">Back to Top</a></li>
 							</ul>
 						</div>
 					</section>
