--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 						</header>
 						<div class="content">
 							<p><strong>I have</strong> been working in IT systems operations for 15 years.
-                                                             Over the last few years, I have picked up programming.</p>
+                                                             Over the last few years, I have picked up programming. So my work has specifically been with the U.S. Air Force; 
+                                                             specializing in Windows, UNIX/Linux, and .Net and Java HR Web applications – enterprise field support for 
+                                                             client/workstations and Servers (Application/Database/File Servers), ranging from 8 to over 1 million end-users.</p>
 							<span class="image main"><img src="images/gallery/alphabet-close-up-colored-211492_612x421.jpg" alt="" /></span>
 						</div>
 					</section>
@@ -45,16 +47,26 @@
 							<h2>my skills</h2>
 						</header>
 						<div class="content">
-							<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
+							<p><strong>Anyone who's worked with me</strong> knows that I have superior technical troubleshooting abilities in Tier II/III Java and .Net application support, network and database connectivity, and cyber security implementations. 
+                                                            I strive to see system/network issues through to their resolution – including end-to-end packet sniffing/analyzing, DNS, and LAN issues. Also:</p>
 							<ul class="feature-icons">
-								<li class="icon fa-laptop">Consequat tempus</li>
-								<li class="icon fa-bolt">Etiam adipiscing</li>
-								<li class="icon fa-signal">Libero nullam</li>
-								<li class="icon fa-gear">Blandit condimentum</li>
-								<li class="icon fa-map-marker">Lorem ipsum dolor</li>
-								<li class="icon fa-code">Nibh amet venenatis</li>
+								<li class="icon fa-bolt">8 yrs. Active Duty AF. Bachelor’s degree in Management/Computer Information Systems.  
+                                                                    Associate’s degree in Health Services Management.  Microsoft Certified Systems Engineer (MCSE), MCSA.  
+                                                                    CompTIA certifications: Security+ CEU, Network+, and A+.  </li>
+                                                                <li class="icon fa-code">Microsoft SharePoint, Microsoft FrontPage, Dreamweaver, HTML/CSS, JavaScript, PL/SQL, Java, C++, Python, 
+                                                                    VisualBasic, .NET, shell, Powershell</li>
+                                                                <li class="icon fa-laptop">Replacement, installation, troubleshooting, and configuration of:<br>
+                                                                    VoIP telephones, PC motherboards, CPU’s, Hard Drives, Modems (Internal, External, PCI/MCIA), 
+                                                                    Network Interface Cards, Sound/Video Cards, Power Supplies, Printers, Scanners, HP laser/inkjet 
+                                                                    printers, Copiers (on a LAN), SAN’s, Routers, Switches, Hubs</li>
+								<li class="icon fa-signal">Air Force Military Personnel Data Systems, Oracle E-Business Suite (HR), HelpSTAR (helpdesk solution), 
+                                                                    StarTeam/APEX, Remedy (trouble ticketing system), SSMS (SQL Server Management Studio), SMS (Systems Management Server), 
+                                                                    DRA (Directory and Resource Administrator/Active Directory), Microsoft Office Suite 2007/2010/2013, Microsoft Outlook 2007/2010/2013, 
+                                                                    Microsoft Internet Information Services (IIS), OpenText eDOCS (DM)</li>
+								<li class="icon fa-gear">Windows Server NT/2000/2003/2008/2012, Windows 95/98/XP/Vista/7/8/10, Linux/Ubuntu, 
+                                                                    Microsoft SQL Server 2000/2005/2008, Oracle 10g/11g, Microsoft Access (RDBMS)</li>
+								<li class="icon fa-map-marker">TCP/IP, DHCP, DNS, FTP, Telnet, DSL/Cable, switches/routers (Cisco), VPN, VLAN, LAN/WAN</li>
 							</ul>
-							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
 						</div>
 					</section>
 
@@ -64,7 +76,7 @@
 							<h2>my projects</h2>
 						</header>
 						<div class="content">
-							<p><strong>Projects</strong> below are snippets of my current work.</p>
+							<p><strong>Projects</strong> below are samples of my current programming work.</p>
 
 							<!-- Section -->
 								<section>
@@ -134,281 +146,13 @@
 						</div>
 					</section>
 
-				<!-- Elements -->
-				<!--
-					<section>
-						<header>
-							<h2>Elements</h2>
-						</header>
-						<div class="content">
-
-							<section>
-								<header>
-									<h3>Text</h3>
-								</header>
-								<div class="content">
-									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
-									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
-									<hr />
-									<h2>Heading Level 2</h2>
-									<h3>Heading Level 3</h3>
-									<h4>Heading Level 4</h4>
-									<h5>Heading Level 5</h5>
-									<hr />
-									<h5>Blockquote</h5>
-									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
-									<h5>Preformatted</h5>
-									<pre><code>i = 0;
-
-while (!deck.isInOrder()) {
-  print 'Iteration ' + i;
-  deck.shuffle();
-  i++;
-}
-
-print 'Sorted in ' + i + ' iterations.';</code></pre>
-								</div>
-							</section>
-
-							<section>
-								<header>
-									<h3>Lists</h3>
-								</header>
-								<div class="content">
-
-									<h4>Unordered</h4>
-									<ul>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
-
-									<h4>Alternate</h4>
-									<ul class="alt">
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
-
-									<h4>Ordered</h4>
-									<ol>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis viverra.</li>
-										<li>Felis enim feugiat.</li>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis lorem.</li>
-										<li>Felis enim et feugiat.</li>
-									</ol>
-									<h4>Icons</h4>
-									<ul class="icons">
-										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-									</ul>
-
-									<h4>Actions</h4>
-									<ul class="actions">
-										<li><a href="#" class="button primary">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions stacked">
-										<li><a href="#" class="button primary">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-								</div>
-							</section>
-
-							<section>
-								<header>
-									<h3>Table</h3>
-								</header>
-								<div class="content">
-									<h4>Default</h4>
-									<div class="table-wrapper">
-										<table>
-											<thead>
-												<tr>
-													<th>Name</th>
-													<th>Description</th>
-													<th>Price</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Item One</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Two</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Three</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Four</td>
-													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Five</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-											</tbody>
-											<tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
-											</tfoot>
-										</table>
-									</div>
-
-									<h4>Alternate</h4>
-									<div class="table-wrapper">
-										<table class="alt">
-											<thead>
-												<tr>
-													<th>Name</th>
-													<th>Description</th>
-													<th>Price</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Item One</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Two</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Three</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Four</td>
-													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Five</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-											</tbody>
-											<tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
-											</tfoot>
-										</table>
-									</div>
-								</div>
-							</section>
-
-							<section>
-								<header>
-									<h3>Buttons</h3>
-								</header>
-								<div class="content">
-									<ul class="actions">
-										<li><a href="#" class="button primary">Primary</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button large">Large</a></li>
-										<li><a href="#" class="button">Default</a></li>
-										<li><a href="#" class="button small">Small</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button primary icon fa-download">Icon</a></li>
-										<li><a href="#" class="button icon fa-download">Icon</a></li>
-									</ul>
-									<ul class="actions">
-										<li><span class="button primary disabled">Disabled</span></li>
-										<li><span class="button disabled">Disabled</span></li>
-									</ul>
-								</div>
-							</section>
-
-							<section>
-								<header>
-									<h3>Form</h3>
-								</header>
-								<div class="content">
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<label for="demo-name">Name</label>
-												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" />
-											</div>
-											<div class="field half">
-												<label for="demo-email">Email</label>
-												<input type="email" name="demo-email" id="demo-email" value="" placeholder="jane@untitled.tld" />
-											</div>
-											<div class="field">
-												<label for="demo-category">Category</label>
-												<select name="demo-category" id="demo-category">
-													<option value="">-</option>
-													<option value="1">Manufacturing</option>
-													<option value="1">Shipping</option>
-													<option value="1">Administration</option>
-													<option value="1">Human Resources</option>
-												</select>
-											</div>
-											<div class="field half">
-												<input type="radio" id="demo-priority-low" name="demo-priority" checked>
-												<label for="demo-priority-low">Low</label>
-											</div>
-											<div class="field half">
-												<input type="radio" id="demo-priority-high" name="demo-priority">
-												<label for="demo-priority-high">High</label>
-											</div>
-											<div class="field half">
-												<input type="checkbox" id="demo-copy" name="demo-copy">
-												<label for="demo-copy">Email me a copy</label>
-											</div>
-											<div class="field half">
-												<input type="checkbox" id="demo-human" name="demo-human" checked>
-												<label for="demo-human">Not a robot</label>
-											</div>
-											<div class="field">
-												<label for="demo-message">Message</label>
-												<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><input type="submit" value="Send Message" class="primary" /></li>
-											<li><input type="reset" value="Reset" /></li>
-										</ul>
-									</form>
-								</div>
-							</section>
-
-						</div>
-					</section>
-				-->
-
 				<!-- Section -->
 					<section>
 						<header>
 							<h2>Contact me</h2>
 						</header>
 						<div class="content">
-							<p><strong>Auctor commodo</strong> interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis.</p>
+							<p><strong>If you would</strong> like to contact me, please fill the below fields and click "Send"; and I will contact you as soon as possible.</p>
 							<form>
 								<div class="fields">
 									<div class="field half">
@@ -422,7 +166,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 									</div>
 								</div>
 								<ul class="actions">
-									<li><input type="submit" value="Send Message" class="button primary" /></li>
+									<li><input type="submit" value="Send" class="button primary" /></li>
 								</ul>
 							</form>
 						</div>
@@ -430,20 +174,20 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">information@untitled.ext</a>
+									<a href="#">erniedl.00@gmail.com</a>
 								</li>
 								<li>
 									<h3>Phone</h3>
-									<a href="#">(000) 000-0000</a>
+									<a href="#">(210) 885-8205</a>
 								</li>
 								<li>
 									<h3>Location</h3>
 									<span>San Antonio, TX</span>
 								</li>
 								<li>
-									<h3>Elsewhere</h3>
+									<h3>online</h3>
 									<ul class="icons">
-										<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="https://github.com/scoutit/" class="icon fa-github"><span class="label">GitHub</span></a></li>
 										<li><a href="#" class="icon fa-codepen"><span class="label">Codepen</span></a></li>
 									</ul>
 								</li>
