--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 					</section>
 
 				<!-- Copyright -->
-					<div class="copyright">&copy; Ernie's Portfolio. All rights reserved. Design: <a href="https://html5up.net">@ALJKN/HTML5 UP</a>.</div>
+					<div class="copyright">Ernie's Portfolio. Design: <a href="https://html5up.net">@ALJKN/HTML5 UP</a>.</div>
 
 			</div>
 
