--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						</div>
 					</section>
 
-				<!-- Section -->
+				<!-- Section --><!-- about me -->
 					<section id="first">
 						<header>
 							<h2>about me</h2>
@@ -41,7 +41,7 @@
 						</div>
 					</section>
 
-				<!-- Section -->
+				<!-- Section --><!-- my skills -->
 					<section>
 						<header>
 							<h2>my skills</h2>
@@ -70,7 +70,7 @@
 						</div>
 					</section>
 
-				<!-- Section -->
+				<!-- Section --><!-- my projects -->
 					<section>
 						<header>
 							<h2>my projects</h2>
@@ -90,10 +90,10 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/01.jpg" class="landscape"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
+											<a href="images/gallery/fulls/01.jpg" class="landscape"><img src="images/gallery/thumbs/hashboard_main_1064x641.png" alt="" /></a>
+											<a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/hashboard_phase1_505x667.png" alt="" /></a>
+											<a href="images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/hashboard_phase3_683x872.png" alt="" /></a>
+											<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/hashboard_phase5_949x574.png" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -106,9 +106,9 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/05.jpg" class="landscape"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
+											<a href="images/gallery/fulls/05.jpg" class="landscape"><img src="images/gallery/thumbs/milmock_main_1010x615.png" alt="" /></a>
+											<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/milmock_main2_464x559.png" alt="" /></a>
+											<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/milmock_payform_698x513.png" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -132,7 +132,7 @@
 						</div>
 					</section>
 
-				<!-- Section -->
+				<!-- Section --><!-- my resume -->
 					<section>
 						<header>
 							<h2>my resume</h2>
@@ -146,7 +146,7 @@
 						</div>
 					</section>
 
-				<!-- Section -->
+				<!-- Section --><!-- contact me -->
 					<section>
 						<header>
 							<h2>Contact me</h2>
