--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<h2>my skills</h2>
 						</header>
 						<div class="content">
-							<p><strong>Anyone who's worked with me</strong> knows that I have superior technical troubleshooting abilities in Tier II/III Java and .Net application support, network and database connectivity, and cyber security implementations. 
+							<p><strong>Over the last several years</strong>, I've gained a lot of technical troubleshooting abilities in Tier II/III Java and .Net application support, network and database connectivity, and cyber security implementations. 
                                                             I strive to see system/network issues through to their resolution – including end-to-end packet sniffing/analyzing, DNS, and LAN issues. Also:</p>
 							<ul class="feature-icons">
 								<li class="icon fa-bolt">8 yrs. Active Duty AF. Bachelor’s degree in Management/Computer Information Systems.  
@@ -90,10 +90,10 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/01.jpg" class="landscape"><img src="images/gallery/thumbs/hashboard_main_1064x641.png" alt="" /></a>
-											<a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/hashboard_phase1_505x667.png" alt="" /></a>
-											<a href="images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/hashboard_phase3_683x872.png" alt="" /></a>
-											<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/hashboard_phase5_949x574.png" alt="" /></a>
+											<a href="images/gallery/fulls/hashboard_main.png" class="landscape"><img src="images/gallery/thumbs/hashboard_main_1064x641.png" alt="" /></a>
+											<a href="images/gallery/fulls/hashboard_phase1.png"><img src="images/gallery/thumbs/hashboard_phase1_505x667.png" alt="" /></a>
+											<a href="images/gallery/fulls/hashboard_phase3.png"><img src="images/gallery/thumbs/hashboard_phase3_683x872.png" alt="" /></a>
+											<a href="images/gallery/fulls/hashboard_phase5.png" class="landscape"><img src="images/gallery/thumbs/hashboard_phase5_949x574.png" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -106,9 +106,9 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/05.jpg" class="landscape"><img src="images/gallery/thumbs/milmock_main_1010x615.png" alt="" /></a>
-											<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/milmock_main2_464x559.png" alt="" /></a>
-											<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/milmock_payform_698x513.png" alt="" /></a>
+											<a href="images/gallery/fulls/milmock_main.png" class="landscape"><img src="images/gallery/thumbs/milmock_main_1010x615.png" alt="" /></a>
+											<a href="images/gallery/fulls/milmock_main2.png"><img src="images/gallery/thumbs/milmock_main2_464x559.png" alt="" /></a>
+											<a href="images/gallery/fulls/milmock_payform.png"><img src="images/gallery/thumbs/milmock_payform_698x513.png" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -122,9 +122,10 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/08.jpg" class="portrait"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/09.jpg" class="portrait"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/10.jpg" class="landscape"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
+									                <a href="images/gallery/fulls/adminstuff_main.png" class="landscape"><img src="images/gallery/thumbs/adminstuff_main_1159x702.png" alt="" /></a>											
+                                                                                        <a href="images/gallery/fulls/adminstuff_browse1.png" class="portrait"><img src="images/gallery/thumbs/adminstuff_browse1_533x636.png" alt="" /></a>
+											<a href="images/gallery/fulls/adminstuff_browse2.png" class="portrait"><img src="images/gallery/thumbs/adminstuff_browse2_717x761.png" alt="" /></a>
+							                  		<a href="images/gallery/fulls/adminstuff_script.png" class="landscape"><img src="images/gallery/thumbs/adminstuff_script_972x765.png" alt="" /></a>
 										</div>
 									</div>
 								</section>
