--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 						<div class="content">
 							<p><strong>Please</strong> feel free to download my current resume for offline review.</p>
 							<ul class="actions">
-								<li><a href="#" class="button primary large">Download Resume (PDF)</a></li>
+								<li><a href="assets/myresume2018.pdf" download="assets/myresume2018.pdf" class="button primary large">Download Resume (PDF)</a></li>
 								<li><a href="#" class="button large">Back to Top</a></li>
 							</ul>
 						</div>
@@ -154,8 +154,9 @@
 						</header>
 						<div class="content">
 							<p><strong>If you would</strong> like to contact me, please fill the below fields and click "Send"; and I will contact you as soon as possible.</p>
+							<!-- <form action="https://formspree.io/erniedl.00@gmail.com" method="POST" > -->
 							<form>
-								<div class="fields">
+                                                                <div class="fields">
 									<div class="field half">
 										<input type="text" name="name" id="name" placeholder="Name" />
 									</div>
