--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 									<h3>online</h3>
 									<ul class="icons">
 										<li><a href="https://github.com/scoutit/" class="icon fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon fa-codepen"><span class="label">Codepen</span></a></li>
+										<!-- <li><a href="#" class="icon fa-codepen"><span class="label">Codepen</span></a></li> -->
 									</ul>
 								</li>
 							</ul>
