--- a/index.html
+++ b/index.html
@@ -129,6 +129,39 @@
 										</div>
 									</div>
 								</section>
+                                                        <!-- Section -->
+								<section>
+									<header>
+										<h3>NetSniff (Java) **Work in Progress**</h3>
+										<p>A graphical view of my network activity. 
+                                                                                It refreshes every 15 seconds (4x/min) or on-demand with a refresh button. Keeps a log of activity and be able 
+                                                                                to notice anything out of the ordinary.
+                                                                                </p>
+									</header>
+									<div class="content">
+										<div class="gallery">
+                                                                                    <a href="images/gallery/fulls/netsniff_main.png" class="landscape"><img src="images/gallery/thumbs/netsniff_main_1008x615.png" alt="" /></a>
+										</div>
+									</div>
+								</section>
+<!-- Section -->
+								<section>
+									<header>
+										<h3>SportCard Seller (Java) **Work in Progress**</h3>
+										<p>An application that stores my sports cards with respective info and image, 
+                                                                                so that they will be sold online. 
+                                                                                It goes out and grabs pricing, and suggest a lower price for me to tag 
+                                                                                items with before submitting them for sale online. It keeps 
+                                                                                track of the item and notifies me if there's something needing my attention.
+                                                                                </p>
+									</header>
+									<div class="content">
+										<div class="gallery">
+									                <a href="images/gallery/fulls/cardseller_main.png" class="landscape"><img src="images/gallery/thumbs/cardseller_main_1005x670.png" alt="main cardseller" /></a>
+										</div>
+									</div>
+								</section>
+
 
 						</div>
 					</section>
