added formspree.io for emailing contact me message

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 									<header>
 										<h3>Hashboard (java)</h3>
 										<p>A hacking dashboard/toolkit that breaks down the 5 phases involved in a typical hacking process. 
-                                        A colorful graphical display will only show each phase's description and any associated known hacking tools. 
-                                        No hacking is actually performed, as it is only static/non-linked info.<br>
-                                        Information mostly from https://www.geeksforgeeks.org/5-phases-hacking/ 
-                                        and http://blog.tofte-it.dk/ethical-hacking-tools-for-the-5-phases-of-hacking/).</p>
+                                                                                A colorful graphical display will only show each phase's description and any associated known hacking tools. 
+                                                                                No hacking is actually performed, as it is only static/non-linked info.<br>
+                                                                                Information mostly from https://www.geeksforgeeks.org/5-phases-hacking/ 
+                                                                                and http://blog.tofte-it.dk/ethical-hacking-tools-for-the-5-phases-of-hacking/).</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -187,8 +187,7 @@
 						</header>
 						<div class="content">
 							<p><strong>If you would</strong> like to contact me, please fill the below fields and click "Send"; and I will contact you as soon as possible.</p>
-							<!-- <form action="https://formspree.io/erniedl.00@gmail.com" method="POST" > -->
-							<form>
+							<form action="https://formspree.io/erniedl.00@gmail.com" method="POST" >
                                                                 <div class="fields">
 									<div class="field half">
 										<input type="text" name="name" id="name" placeholder="Name" />
