grammer corrections thanks to my daughter

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 						</header>
 						<div class="content">
 							<p><strong>I have</strong> been working in IT systems operations for 15 years.
-                                                             Over the last few years, I have picked up programming. So my work has specifically been with the U.S. Air Force; 
+                                                             Over the last few years, I have picked up programming. My work has specifically been with the U.S. Air Force; 
                                                              specializing in Windows, UNIX/Linux, and .Net and Java HR Web applications – enterprise field support for 
                                                              client/workstations and Servers (Application/Database/File Servers), ranging from 8 to over 1 million end-users.</p>
-							<span class="image main"><img src="images/gallery/alphabet-close-up-colored-211492_612x421.jpg" alt="" /></span>
+							<span class="image main"><img src="images/gallery/alphabet-close-up-colored-211492_612x421.jpg" alt="keyboard pic" /></span>
 						</div>
 					</section>
 
@@ -47,7 +47,7 @@
 							<h2>my skills</h2>
 						</header>
 						<div class="content">
-							<p><strong>Over the last several years</strong>, I've gained a lot of technical troubleshooting abilities in Tier II/III Java and .Net application support, network and database connectivity, and cyber security implementations. 
+							<p><strong>Over the last several years</strong>, I have gained a lot of technical troubleshooting abilities in Tier II/III Java and .Net application support, network and database connectivity, and cyber security implementations. 
                                                             I strive to see system/network issues through to their resolution – including end-to-end packet sniffing/analyzing, DNS, and LAN issues. Also:</p>
 							<ul class="feature-icons">
 								<li class="icon fa-bolt">8 yrs. Active Duty AF. Bachelor’s degree in Management/Computer Information Systems.  
@@ -86,14 +86,14 @@
                                                                                 A colorful graphical display will only show each phase's description and any associated known hacking tools. 
                                                                                 No hacking is actually performed, as it is only static/non-linked info.<br>
                                                                                 Information mostly from https://www.geeksforgeeks.org/5-phases-hacking/ 
-                                                                                and http://blog.tofte-it.dk/ethical-hacking-tools-for-the-5-phases-of-hacking/).</p>
+                                                                                <br>and <br>http://blog.tofte-it.dk/ethical-hacking-tools-for-the-5-phases-of-hacking/).</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/hashboard_main.png" class="landscape"><img src="images/gallery/thumbs/hashboard_main_1064x641.png" alt="" /></a>
-											<a href="images/gallery/fulls/hashboard_phase1.png"><img src="images/gallery/thumbs/hashboard_phase1_505x667.png" alt="" /></a>
-											<a href="images/gallery/fulls/hashboard_phase3.png"><img src="images/gallery/thumbs/hashboard_phase3_683x872.png" alt="" /></a>
-											<a href="images/gallery/fulls/hashboard_phase5.png" class="landscape"><img src="images/gallery/thumbs/hashboard_phase5_949x574.png" alt="" /></a>
+											<a href="images/gallery/fulls/hashboard_main.png" class="landscape"><img src="images/gallery/thumbs/hashboard_main_1064x641.png" alt="main hashboard pic" /></a>
+											<a href="images/gallery/fulls/hashboard_phase1.png"><img src="images/gallery/thumbs/hashboard_phase1_505x667.png" alt="hashboard phase 1 pic" /></a>
+											<a href="images/gallery/fulls/hashboard_phase3.png"><img src="images/gallery/thumbs/hashboard_phase3_683x872.png" alt="hashboard phase 3 pic" /></a>
+											<a href="images/gallery/fulls/hashboard_phase5.png" class="landscape"><img src="images/gallery/thumbs/hashboard_phase5_949x574.png" alt="hashboard phase 5 pic" /></a>
 										</div>
 									</div>
 								</section>
@@ -106,9 +106,9 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/milmock_main.png" class="landscape"><img src="images/gallery/thumbs/milmock_main_1010x615.png" alt="" /></a>
-											<a href="images/gallery/fulls/milmock_main2.png"><img src="images/gallery/thumbs/milmock_main2_464x559.png" alt="" /></a>
-											<a href="images/gallery/fulls/milmock_payform.png"><img src="images/gallery/thumbs/milmock_payform_698x513.png" alt="" /></a>
+											<a href="images/gallery/fulls/milmock_main.png" class="landscape"><img src="images/gallery/thumbs/milmock_main_1010x615.png" alt="main milmock pic" /></a>
+											<a href="images/gallery/fulls/milmock_main2.png"><img src="images/gallery/thumbs/milmock_main2_464x559.png" alt="main milmock 2 pic" /></a>
+											<a href="images/gallery/fulls/milmock_payform.png"><img src="images/gallery/thumbs/milmock_payform_698x513.png" alt="milmock payform pic" /></a>
 										</div>
 									</div>
 								</section>
@@ -122,10 +122,10 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-									                <a href="images/gallery/fulls/adminstuff_main.png" class="landscape"><img src="images/gallery/thumbs/adminstuff_main_1159x702.png" alt="" /></a>											
-                                                                                        <a href="images/gallery/fulls/adminstuff_browse1.png" class="portrait"><img src="images/gallery/thumbs/adminstuff_browse1_533x636.png" alt="" /></a>
-											<a href="images/gallery/fulls/adminstuff_browse2.png" class="portrait"><img src="images/gallery/thumbs/adminstuff_browse2_717x761.png" alt="" /></a>
-							                  		<a href="images/gallery/fulls/adminstuff_script.png" class="landscape"><img src="images/gallery/thumbs/adminstuff_script_972x765.png" alt="" /></a>
+									                <a href="images/gallery/fulls/adminstuff_main.png" class="landscape"><img src="images/gallery/thumbs/adminstuff_main_1159x702.png" alt="main admin pic" /></a>											
+                                                                                        <a href="images/gallery/fulls/adminstuff_browse1.png" class="portrait"><img src="images/gallery/thumbs/adminstuff_browse1_533x636.png" alt="admin browse 1 pic" /></a>
+											<a href="images/gallery/fulls/adminstuff_browse2.png" class="portrait"><img src="images/gallery/thumbs/adminstuff_browse2_717x761.png" alt="admin browse 2 pic" /></a>
+							                  		<a href="images/gallery/fulls/adminstuff_script.png" class="landscape"><img src="images/gallery/thumbs/adminstuff_script_972x765.png" alt="admin script pic" /></a>
 										</div>
 									</div>
 								</section>
@@ -140,7 +140,7 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-                                                                                    <a href="images/gallery/fulls/netsniff_main.png" class="landscape"><img src="images/gallery/thumbs/netsniff_main_1008x615.png" alt="" /></a>
+                                                                                    <a href="images/gallery/fulls/netsniff_main.png" class="landscape"><img src="images/gallery/thumbs/netsniff_main_1008x615.png" alt="main netsniff pic" /></a>
 										</div>
 									</div>
 								</section>
@@ -157,7 +157,7 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-									                <a href="images/gallery/fulls/cardseller_main.png" class="landscape"><img src="images/gallery/thumbs/cardseller_main_1005x670.png" alt="main cardseller" /></a>
+									                <a href="images/gallery/fulls/cardseller_main.png" class="landscape"><img src="images/gallery/thumbs/cardseller_main_1005x670.png" alt="main cardseller pic" /></a>
 										</div>
 									</div>
 								</section>
