Updated resume file.

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 						<div class="content">
 							<p><strong>Please</strong> feel free to download my current resume for offline review.</p>
 							<ul class="actions">
-								<li><a href="assets/myresume2018.pdf" download="assets/myresume2018.pdf" class="button primary large">Download Resume (PDF)</a></li>
+								<li><a href="assets/Deluna-Resume-2020.pdf" download="assets/Deluna-Resume-2020.pdf" class="button primary large">Download Resume (PDF)</a></li>
 								<li><a href="#" class="button large">Back to Top</a></li>
 							</ul>
 						</div>
