--- a/index.html
+++ b/index.html
@@ -186,7 +186,10 @@
 							<h2>Contact me</h2>
 						</header>
 						<div class="content">
-							<p><strong>If you would</strong> like to contact me, please fill the below fields and click "Send"; and I will contact you as soon as possible.</p>
+							<p><strong>If you would</strong> like to contact me, please fill the below fields and click "Send"; 
+                                                            and I will contact you as soon as possible. <strong>Granted</strong>, you <i>could</i> also just email me, since I provided it
+                                                            on the left, but this way (from <a href="https://formspree.io">formspree.io</a>) is much cooler :)
+                                                        </p>
 							<form name="contactmeform" onsubmit="return checkForm(this);" action="https://formspree.io/erniedl.00@gmail.com" method="POST" >
                                                             <div class="fields">
 									<div class="field half">
@@ -221,7 +224,7 @@
 								<li>
 									<h3>online</h3>
 									<ul class="icons">
-										<li><a href="https://github.com/scoutit/" class="icon fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="https://github.com/scoutit/" class="icon fa-github"><span class="label">GitHub (recursive reference)</span></a></li>
 										<!-- <li><a href="#" class="icon fa-codepen"><span class="label">Codepen</span></a></li> -->
 									</ul>
 								</li>
