--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 						<div class="content">
 							<p><strong>If you would</strong> like to contact me, please fill the below fields and click "Send"; 
                                                             and I will contact you as soon as possible. <strong>Granted</strong>, you <i>could</i> also just email me, since I provided it
-                                                            on the left, but this way (from <a href="https://formspree.io">formspree.io</a>) is much cooler :)
+                                                            on the left/below, but this way (from <a href="https://formspree.io">formspree.io</a>) is much cooler :)
                                                         </p>
 							<form name="contactmeform" onsubmit="return checkForm(this);" action="https://formspree.io/erniedl.00@gmail.com" method="POST" >
                                                             <div class="fields">
