updated content (tradingcardz)

--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
 							<h2>about me</h2>
 						</header>
 						<div class="content">
-							<p><strong>I have</strong> been working in IT systems operations for 15 years.
-                                                             Over the last few years, I have picked up programming. My work has specifically been with the U.S. Air Force; 
+							<p><strong>I have</strong> been working in IT systems and operations for 15 years.
+                                                             Most of my professional work has been with the U.S. Air Force; 
                                                              specializing in Windows, UNIX/Linux, and .Net and Java HR Web applications – enterprise field support for 
-                                                             client/workstations and Servers (Application/Database/File Servers), ranging from 8 to over 1 million end-users.</p>
+                                                             client/workstations and Servers (Application/Database/File Servers), ranging from 8 to over 1 million end-users.
+                                                             I crossed over from the client/network support domain into the software development domain several years ago.
+                                                        </p>
 							<span class="image main"><img src="images/gallery/alphabet-close-up-colored-211492_612x421.jpg" alt="keyboard pic" /></span>
 						</div>
 					</section>
@@ -48,23 +50,24 @@
 						</header>
 						<div class="content">
 							<p><strong>Over the last several years</strong>, I have gained a lot of technical troubleshooting abilities in Tier II/III Java and .Net application support, network and database connectivity, and cyber security implementations. 
-                                                            I strive to see system/network issues through to their resolution – including end-to-end packet sniffing/analyzing, DNS, and LAN issues. Also:</p>
+                                                            Not only do I have excellent problem-solving skills, but I have worked to see system/network issues through to their resolution – including end-to-end packet sniffing/analyzing, DNS, and LAN issues. 
+                                                            Also:</p>
 							<ul class="feature-icons">
 								<li class="icon fa-bolt">8 yrs. Active Duty AF. Bachelor’s degree in Management/Computer Information Systems.  
                                                                     Associate’s degree in Health Services Management.  Microsoft Certified Systems Engineer (MCSE), MCSA.  
                                                                     CompTIA certifications: Security+ CEU, Network+, and A+.  </li>
                                                                 <li class="icon fa-code">Microsoft SharePoint, Microsoft FrontPage, Dreamweaver, HTML/CSS, JavaScript, PL/SQL, Java, C++, Python, 
-                                                                    VisualBasic, .NET, shell, Powershell</li>
+                                                                    VisualBasic, .NET, shell, Powershell, Visual Studio IDE, VSCode IDE, NetBeans IDE</li>
                                                                 <li class="icon fa-laptop">Replacement, installation, troubleshooting, and configuration of:<br>
                                                                     VoIP telephones, PC motherboards, CPU’s, Hard Drives, Modems (Internal, External, PCI/MCIA), 
                                                                     Network Interface Cards, Sound/Video Cards, Power Supplies, Printers, Scanners, HP laser/inkjet 
                                                                     printers, Copiers (on a LAN), SAN’s, Routers, Switches, Hubs</li>
 								<li class="icon fa-signal">Air Force Military Personnel Data Systems, Oracle E-Business Suite (HR), HelpSTAR (helpdesk solution), 
                                                                     StarTeam/APEX, Remedy (trouble ticketing system), SSMS (SQL Server Management Studio), SMS (Systems Management Server), 
-                                                                    DRA (Directory and Resource Administrator/Active Directory), Microsoft Office Suite 2007/2010/2013, Microsoft Outlook 2007/2010/2013, 
+                                                                    DRA (Directory and Resource Administrator/Active Directory), Microsoft Office Suite, 
                                                                     Microsoft Internet Information Services (IIS), OpenText eDOCS (DM)</li>
-								<li class="icon fa-gear">Windows Server NT/2000/2003/2008/2012, Windows 95/98/XP/Vista/7/8/10, Linux/Ubuntu, 
-                                                                    Microsoft SQL Server 2000/2005/2008, Oracle 10g/11g, Microsoft Access (RDBMS)</li>
+								<li class="icon fa-gear">Windows Server, Windows Desktop, Linux/Ubuntu, 
+                                                                    Microsoft SQL Server, Oracle DB, Microsoft Access (RDBMS)</li>
 								<li class="icon fa-map-marker">TCP/IP, DHCP, DNS, FTP, Telnet, DSL/Cable, switches/routers (Cisco), VPN, VLAN, LAN/WAN</li>
 							</ul>
 						</div>
@@ -77,7 +80,28 @@
 						</header>
 						<div class="content">
 							<p><strong>Projects</strong> below are samples of my current programming work.</p>
-
+                                                        <!-- Section -->
+								<section>
+									<header>
+										<h3>TradingCardz Seller (Java)</h3>
+                                                                                <p>Using <strong>OpenCV</strong> for image capture and <strong>Gecko/Selenium</strong> for dynamic web parsing,
+                                                                                this application stores my sports cards in an Oracle DB with respective info and image, to be sold online. 
+                                                                                It goes out and grabs pricing, and suggests a lower price for me to tag 
+                                                                                items with before submitting them for sale online. It keeps 
+                                                                                track of the item and notifies me if there's something needing my attention.
+                                                                                </p>
+									</header>
+									<div class="content">
+										<div class="gallery">
+									                <a href="images/gallery/fulls/tradingcardz_main.png" class="landscape"><img src="images/gallery/thumbs/tradingcardz_main_824x553.png" alt="main tradingcardz pic" /></a>
+                                                                                        <a href="images/gallery/fulls/tradingcardz_update.png"><img src="images/gallery/thumbs/tradingcardz_update_534x576.png" alt="tradingcardz update pic" /></a>
+											<a href="images/gallery/fulls/tradingcardz_update_image.png"><img src="images/gallery/thumbs/tradingcardz_update_image_446x459.png" alt="tradingcardz update image pic" /></a>
+                                                                                        <a href="images/gallery/fulls/tradingcardz_takesnap.png"><img src="images/gallery/thumbs/tradingcardz_takesnap_325x462.png" alt="tradingcardz snapshot pic" /></a>
+											<a href="images/gallery/fulls/tradingcardz_analyze.png"><img src="images/gallery/thumbs/tradingcardz_analyze_464x506.png" alt="tradingcardz analyze pic" /></a>
+										        <a href="images/gallery/fulls/tradingcardz_main_new.png" class="landscape"><img src="images/gallery/thumbs/tradingcardz_main_new_861x558.png" alt="tradingcardz main pic" /></a>
+                                                                                </div>
+									</div>
+								</section>
 							<!-- Section -->
 								<section>
 									<header>
@@ -129,6 +153,7 @@
 										</div>
 									</div>
 								</section>
+
                                                         <!-- Section -->
 								<section>
 									<header>
@@ -144,24 +169,6 @@
 										</div>
 									</div>
 								</section>
-<!-- Section -->
-								<section>
-									<header>
-										<h3>SportCard Seller (Java) **Work in Progress**</h3>
-										<p>An application that stores my sports cards with respective info and image, 
-                                                                                so that they will be sold online. 
-                                                                                It goes out and grabs pricing, and suggest a lower price for me to tag 
-                                                                                items with before submitting them for sale online. It keeps 
-                                                                                track of the item and notifies me if there's something needing my attention.
-                                                                                </p>
-									</header>
-									<div class="content">
-										<div class="gallery">
-									                <a href="images/gallery/fulls/cardseller_main.png" class="landscape"><img src="images/gallery/thumbs/cardseller_main_1005x670.png" alt="main cardseller pic" /></a>
-										</div>
-									</div>
-								</section>
-
 
 						</div>
 					</section>
