corrected content (tradingcardz)

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                                         <!-- Section -->
 								<section>
 									<header>
-										<h3>TradingCardz Seller (Java)</h3>
+										<h3>TradingCardz (Java)</h3>
                                                                                 <p>Using <strong>OpenCV</strong> for image capture and <strong>Gecko/Selenium</strong> for dynamic web parsing,
                                                                                 this application stores my sports cards in an Oracle DB with respective info and image, to be sold online. 
                                                                                 It goes out and grabs pricing, and suggests a lower price for me to tag 
